Fix layout issues on mobile

--- a/styles.css
+++ b/styles.css
@@ -11,19 +11,20 @@
 body {
   height: 100vh;
   background-color: #e1b887;
-  padding-top: 1rem;
   overflow: hidden;
 
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 3rem;
+  gap: 2rem;
 }
 
 header {
   width: 70%;
   max-width: 1200px;
   padding: 0.5rem 0;
+  margin-top: 3rem;
+
   text-align: center;
   background-color: #df6e63;
   box-shadow: 0 0.5rem #252b35;
@@ -41,6 +42,7 @@ main {
   max-width: 1000px;
 
   display: flex;
+  gap: 1rem;
 }
 
 main > * {
@@ -83,7 +85,7 @@ main > * {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 3rem;
+  gap: 2rem;
 }
 
 h2 {
@@ -93,7 +95,7 @@ h2 {
 
 .canvas {
   height: 330px;
-  aspect-ratio: 1/1;
+  width: 330px;
   background-color: #fff;
   box-shadow: 0 0.5rem #252b35;
 
@@ -259,9 +261,6 @@ input[type="range"]::-webkit-slider-thumb {
 }
 
 @media (max-width: 800px) {
-  body {
-    padding-top: 3rem;
-  }
 
   h1,
   h2 {
@@ -272,25 +271,28 @@ input[type="range"]::-webkit-slider-thumb {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 3rem;
+    gap: 2rem;
   }
 
   .buttons {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-
-    max-height: 8rem;
-    width: 100%;
+    max-height: 6rem;
   }
 
   .button {
-    min-width: 4rem;
+    min-width: 3.5rem;
   }
 
   .canvas-and-sliders {
-    width: 90%;
-    max-height: 400px;
+    max-width: 100%;
+    max-height: 450px;
+  }
+
+  .canvas {
+    width: 280px;
+    height: 280px;
   }
 
   .lines {
